


{0}2020-07-08{1}

{2}The number of recent folderes remembered is now configurable via the SET command.

{2}The length limit of project names was increased to 30 characters.

{2}Added -AUTO switch to the FORGET command for quick cleanup of the folder list.

{2}Added directory styles via the SET command: full (classic), compact, and symbolic.

{2}Bug fixed: Square brackets [] in file names were causing unexpected results.



{0}2020-08-04{1}

{2}Fixed a bug in FORGET -AUTO that would skip over missing folders.

{2}USE command now accepts partial project nicknames. Ex: "USE my" and "USE pro" will work same as "USE myproject".



{0}2020-08-05{1}

{2}Added a new setting to automatically open new files in the configured text editor (default TRUE). Great suggestion, Yamil F.!



{0}2020-09-29{1}

{2}Added -CODE switch to limit search results to files containing pre- or post-code.



{0}2020-11-17{1}

{2}Removed GIT command.

{2}Added -U switch to find uncommitted files. This works with several file commands.

{2}Added -H switch to DIR command to view commit history.

{2}Added <BOF> and <EOF> comments to generated output to make the text more human-readable.

{2}Added more collation handlers to COMPARE command output to hopefully avoid collation conflicts during SQL exeucution.



{0}2020-12-02{1}

{2}Added automatic execution logging for stored procedures, including input & output parameters.

{2}DELETE command was crashing with -U switch. Fixed.

{2}Processing filenames with spaces was crashing with -U switch. Fixed.



{0}2020-12-11{1}

{2}Settings are WAY easier to understand now! Type SET command and see for yourself!

{2}Added GENERATE -RUNLOG switch to override runlog settings of individual stored procedures.

{2}Merged several functions into the ABOUT command.



{0}2021-01-28{1}

{2}Settings were not being saved correctly. Fixed.



{0}2021-07-22{1}

{2}Added a reminder to enable runlogging on any proc with "delete" in the name.
