@@ -2596,15 +2596,15 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:Squealer 2018"
-        "ProductCode" = "8:{9DDF2522-9213-4E43-A6F5-F382FF20A503}"
-        "PackageCode" = "8:{523F007B-7DA4-4967-AFBC-D8DBCFEA5DDE}"
+        "ProductCode" = "8:{2C2D2387-AB04-47C5-91FE-C1C0617370DB}"
+        "PackageCode" = "8:{89877660-7B53-43C8-839E-FB4FB094238A}"
         "UpgradeCode" = "8:{1D6B365A-8443-4FE0-BF17-8DD0D6C149E0}"
         "AspNetVersion" = "8:4.0.30319.0"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:TRUE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:FALSE"
-        "ProductVersion" = "8:1.1.19"
+        "ProductVersion" = "8:1.1.20"
         "Manufacturer" = "8:Philip Wright"
         "ARPHELPTELEPHONE" = "8:"
         "ARPHELPLINK" = "8:"
